--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,15 @@
 <resources>
     <string name="app_name">Swoosh</string>
+    <string name="background_image">Background Image</string>
+    <string name="logo">logo</string>
+    <string name="mens">Mens</string>
+    <string name="womens">Womens</string>
+    <string name="co_ed">CO-ED</string>
+    <string name="next_btn">Next</string>
+    <string name="desired_league">Desired League</string>
+    <string name="welcome_screen">welcome screen</string>
+    <string name="go_all_in">GO ALL IN</string>
+    <string name="on_going_all_out">ON GOING ALL OUT</string>
+    <string name="find_a_team_at_your_city_and_dominate_your_league">Find a team at your city, and dominate your league</string>
+    <string name="get_started">GET STARTED</string>
 </resources>
