--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -12,4 +12,8 @@
     <string name="on_going_all_out">ON GOING ALL OUT</string>
     <string name="find_a_team_at_your_city_and_dominate_your_league">Find a team at your city, and dominate your league</string>
     <string name="get_started">GET STARTED</string>
+    <string name="beginner">BEGINNER</string>
+    <string name="Baller">baller</string>
+    <string name="Finnish">FINNISH</string>
+    <string name="i_am_a">I am a :</string>
 </resources>
