--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -16,4 +16,5 @@
     <string name="Baller">baller</string>
     <string name="Finnish">FINNISH</string>
     <string name="i_am_a">I am a :</string>
+    <string name="search_league">Looking for an co-ed beginner league near you...</string>
 </resources>
